setup barebones html for the tic tac toe webapge to convert js to html/css
make it look real pretty

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <style rel="stylesheet" href="./css/style.css"></style>
 </head>
 <body>
+    <div id="background-title">
+        <h1>TIC TAC TOE</h1>
+    </div>
+    <div id="turn-label">
+        <h1 class="label">player x's turn!</h1>
+    </div>
+    <div id="tic-tac-toe-container">
+        <div id="00" class="box"></div>
+        <div id="01" class="box"></div>
+        <div id="02" class="box"></div>
+        <div id="10" class="box"></div>
+        <div id="11" class="box"></div>
+        <div id="12" class="box"></div>
+        <div id="20" class="box"></div>
+        <div id="21" class="box"></div>
+        <div id="22" class="box"></div>
+    </div>
+    <div id="footer">
+        <div id="name" class="footer-label">
+            <a href="https://github.com/rickeyjohnson">Rickey Johnson</a>
+        </div>
+        <div id="odin-project" class="footer-label">
+            The Odin Project
+        </div>
+    </div>
     <script src="./js/script.js"></script>
 </body>
 </html>
