comment out background title to make structure easier to contrsuct

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <style rel="stylesheet" href="./css/style.css"></style>
 </head>
 <body>
-    <div id="background-title">
+    <!-- <div id="background-title">
         <h1>TIC TAC TOE</h1>
-    </div>
+    </div> -->
     <div id="turn-label">
         <h1 class="label">player x's turn!</h1>
     </div>
