have tic tac toe board displayed using grid

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <h1 class="label">player x's turn!</h1>
     </div>
     <div id="tic-tac-toe-container">
-        <div id="00" class="box"></div>
-        <div id="01" class="box"></div>
-        <div id="02" class="box"></div>
-        <div id="10" class="box"></div>
-        <div id="11" class="box"></div>
-        <div id="12" class="box"></div>
-        <div id="20" class="box"></div>
-        <div id="21" class="box"></div>
-        <div id="22" class="box"></div>
+        <div id="00" class="box">00</div>
+        <div id="01" class="box">01</div>
+        <div id="02" class="box">02</div>
+        <div id="10" class="box">10</div>
+        <div id="11" class="box">11</div>
+        <div id="12" class="box">12</div>
+        <div id="20" class="box">20</div>
+        <div id="21" class="box">21</div>
+        <div id="22" class="box">22</div>
     </div>
     <div id="footer">
         <div id="name" class="footer-label">
