added main section in html and centered everything

--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <link rel="stylesheet" href="./css/style.css"></link>
 </head>
 <body>
-    <!-- <div id="background-title">
-        <h1>TIC TAC TOE</h1>
-    </div> -->
-    <div id="turn-label">
-        <h1 class="label">player x's turn!</h1>
-    </div>
-    <div id="tic-tac-toe-container">
-        <div id="00" class="box">X</div>
-        <div id="01" class="box">O</div>
-        <div id="02" class="box">X</div>
-        <div id="10" class="box">X</div>
-        <div id="11" class="box">O</div>
-        <div id="12" class="box">O</div>
-        <div id="20" class="box">X</div>
-        <div id="21" class="box">X</div>
-        <div id="22" class="box">O</div>
+    <div id="main">
+        <!-- <div id="background-title">
+            <h1>TIC TAC TOE</h1>
+        </div> -->
+        <!-- <div id="turn-label">
+            <h1 class="label">player x's turn!</h1>
+        </div> -->
+        <div id="tic-tac-toe-container">
+            <div id="00" class="box"></div>
+            <div id="01" class="box"></div>
+            <div id="02" class="box"></div>
+            <div id="10" class="box"></div>
+            <div id="11" class="box"></div>
+            <div id="12" class="box"></div>
+            <div id="20" class="box"></div>
+            <div id="21" class="box"></div>
+            <div id="22" class="box"></div>
+        </div>
     </div>
     <div id="footer">
         <div id="name" class="footer-label">
