added X and O label for turns and started js

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <!-- <div id="background-title">
             <h1>TIC TAC TOE</h1>
         </div> -->
-        <!-- <div id="turn-label">
-            <h1 class="label">player x's turn!</h1>
-        </div> -->
+        <div id="turn-label">
+            <h1 class="label">X</h1>
+        </div>
         <div id="tic-tac-toe-container">
             <div id="00" class="box"></div>
             <div id="01" class="box"></div>
@@ -27,10 +27,10 @@
         </div>
     </div>
     <div id="footer">
-        <div id="name" class="footer-label">
+        <div id="name" class="label">
             <a href="https://github.com/rickeyjohnson">Rickey Johnson</a>
         </div>
-        <div id="odin-project" class="footer-label">
+        <div id="odin-project" class="label">
             The Odin Project
         </div>
     </div>
