have click box adds player 1 mark to the spot

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>TIC TAC TOE</h1>
         </div> -->
         <div id="turn-label">
-            <h1 class="label">X</h1>
+            <h1 class="turn label">X</h1>
         </div>
         <div id="tic-tac-toe-container">
             <div id="00" class="box"></div>
