made github open in new page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div id="footer">
         <div id="name" class="label">
-            <a href="https://github.com/rickeyjohnson">Rickey Johnson</a>
+            <a href="https://github.com/rickeyjohnson" target="_blank">Rickey Johnson</a>
         </div>
         <div id="odin-project" class="label">
             The Odin Project
