added reset button to html and scss

--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
         </div>
     </div>
     <div id="footer">
-        <div id="name" class="label">
-            <a href="https://github.com/rickeyjohnson" target="_blank">Rickey Johnson</a>
+        <div id="labels">
+            <div id="name" class="label">
+                <a href="https://github.com/rickeyjohnson" target="_blank">Rickey Johnson</a>
+            </div>
+            <div id="odin-project" class="label">
+                The Odin Project
+            </div>
         </div>
-        <div id="odin-project" class="label">
-            The Odin Project
+        <div id="btn-container">
+            <button>RESET</button>
         </div>
     </div>
     <script src="./js/script.js"></script>
