linked html button to js

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div id="btn-container">
-            <button>RESET</button>
+            <button id="resetBtn">RESET</button>
         </div>
     </div>
     <script src="./js/script.js"></script>
